language/move-lang/tests/move_check/borrows/copy_full_invalid.exp
error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/copy_full_invalid.move:13:9
   │
12 │         let f = &mut x;
   │                 ------ It is still being mutably borrowed by this reference
13 │         x;
   │         ^ Invalid copy of local 'x'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/copy_full_invalid.move:19:9
   │
18 │         let f = id_mut(&mut x);
   │                 -------------- It is still being mutably borrowed by this reference
19 │         x;
   │         ^ Invalid copy of local 'x'

